# grasslands

./: .gitignore  Makefile  README.md  grasslands.cabal
.github/workflows/: ci.yml
examples/: invalid_simple_system.grass  simple_system.grass
lib/: Component.hs  Lexer.hs  Lib.hs  Main.hs  Parser.hs  SemanticAnalyzer.hs  System.hs
src/: Grasslands.hs
test/: Main.hs  Tests.hs
